# ollacode

./: .env.example  README.md  bench_english.json  bench_korean.json  pyproject.toml
ollacode/: __init__.py  benchmark.py  config.py  engine.py  main.py  ollama_client.py  prompts.py  telegram_bot.py  tools.py
